small alignment fix from dhn
git-svn-id: file:///svn/phpbb/trunk@8252 89ea8834-ac86-4346-8a33-228a782c2dd0

--- a/phpBB/styles/prosilver/theme/bidi.css
+++ b/phpBB/styles/prosilver/theme/bidi.css
@@ -280,7 +280,7 @@
 .rtl li.header dl.icon dt {
 	/* Tweak for headers alignment when folder icon used */
 	padding-right: 0;
-	padding-left: 44px;
+	padding-left: 50px;
 }
 
 .rtl dl.icon dt {
